tests/baselines/reference/aliasInaccessibleModule2.errors.txt
aliasInaccessibleModule2.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
aliasInaccessibleModule2.ts(2,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== aliasInaccessibleModule2.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        module N {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            class C {
            }
            
        }
        import R = N;
        export import X = R;
    }